# CoconutHack

./: README.md  app.py  docker-compose.yml  pyproject.toml
.docker/nginx/: nginx.conf
ML/: catalog.csv  main.py
parser/parser/: settings.py
parser/parser/spiders/: crawler.py
routing/v1/: ML.py
schemas/: Categories.py
utils/: utils.py
