[tool.poetry]
name = "Coconut"
version = "0.1.0"
description = ""
authors = ["kirill <shkolenko02-03-2004@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = {extras = ["all"], version = "^0.103.0"}
alembic = "^1.11.3"
loguru = "^0.7.0"
pytest = "^7.4.0"
validators = "^0.22.0"
requests = "^2.31.0"
bs4 = "^0.0.1"
torch = ">=2.0.0, !=2.0.1"
pandas = "^2.1.1"
transformers = {extras = ["torch"], version = "^4.33.3"}
scikit-learn = "^1.3.1"
fake-useragent = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
